--- a/src/scss/globales/_globales.scss
+++ b/src/scss/globales/_globales.scss
@@ -10,7 +10,8 @@ body {
     font-size: 1.6rem;
     line-height: 1.8;
 }
-a {
+body a {
     text-decoration: none;
-    color: $blanco;
+    color: black;
+    font-size: 2rem;
 }
